# anonify

./: .gitignore  README.md  README_FA.md  anonify.spec  build.bat  pyproject.toml
models/yolo11n_openvino_model/: metadata.yaml  yolo11n.xml
src/: main.py
