[project]
name = "anonify"
version = "0.1.0"
description = "Anonymize videos by hiding faces. Designed to be fast."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.0.1",
    "gooey>=1.0.8.1",
    "opencv-python-headless>=4.12.0.88",
    "shortuuid>=1.0.13",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.248",
]

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 88
indent-width = 4

# Enable all rules by default, then exclude specific ones
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D103",    # Missing docstring in public function
    "ANN",     # flake8-annotations (no forced type annotations)
    "PLR2004", # Magic value used in comparison
    "T20",     # flake8-print (allow print statements)
    "C901",    # Function is too complex (mccabe)
    "PLR0904", # Too many public methods
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "CPY001",  # Missing copyright notice at top of file
    "EM",      # flake8-errmsg (exception message formatting)
    "TRY003",  # Avoid specifying long messages outside the exception class
]

# Enable automatic fixes where possible
fix = true
unsafe-fixes = false

# Show violations with source code
output-format = "concise"

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable preview rules for cutting-edge checks
preview = true

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use line endings appropriate for the platform
line-ending = "auto"

# Enable preview style formatting
preview = true

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Format docstrings
docstring-code-format = true
docstring-code-line-length = 72

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[tool.ruff.lint.flake8-bugbear]
# Enable additional checks
extend-immutable-calls = []

[tool.ruff.lint.flake8-builtins]
# Disallow shadowing of builtins
builtins-ignorelist = []

[tool.ruff.lint.flake8-comprehensions]
# Enforce comprehension style
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.lint.flake8-quotes]
# Enforce double quotes
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.flake8-type-checking]
# Enforce TYPE_CHECKING blocks
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["attrs.define", "attrs.frozen"]

[tool.ruff.lint.isort]
# Sort imports
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
known-first-party = ["anonify"]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pep8-naming]
# Enforce naming conventions
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.pycodestyle]
# Maximum line length for comments
max-doc-length = 88
max-line-length = 88
ignore-overlong-task-comments = false

[tool.ruff.lint.pydocstyle]
# Enforce Google-style docstrings
convention = "google"

[tool.ruff.lint.pyupgrade]
# Keep runtime typing
keep-runtime-typing = false
